@@ -39,6 +39,7 @@ test_new (void)
 	 * any kind of list.
 	 */
 	TEST_FUNCTION ("event_new");
+	event_queue_run ();
 	TEST_ALLOC_FAIL {
 		event = event_new (NULL, "test");
 
